# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2023.

[package]
name = "rsa-sw"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
rsa = { version = "0.9.2", default-features = false, features = ["sha2"] }

# [dependencies.rsa]
# git = "https://github.com/kaidokert/fixed-bigint-rs"
# package = "fixed-bigint"

# [dependencies.num-bigint]
# git = "https://github.com/kaidokert/fixed-bigint-rs"
# package = "fixed-bigint"

# [patch.num-bigint]
# num-bigint = { git = "https://github.com/kaidokert/fixed-bigint-rs", package = "fixed-bigint" }

# [patch.crates-io]
# num-bigint = { git = "https://github.com/kaidokert/fixed-bigint-rs", package = "fixed-bigint" }




#num-bigint-dig = { git = "https://github.com/kaidokert/fixed-bigint-rs" }